# slide-deck-analytics-1

./: .buildinfo  README.html  README.md  _toc.yml  genindex.html  index.html  main.ipynb  objects.inv  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy.yml
.ipynb_checkpoints/: _toc-checkpoint.yml
_sources/: README.md  index.md
_sources/notebooks/: main.ipynb
_static/: documentation_options.js
data/: 2016_List.rtf  2018_List.rtf  2020_List.rtf  2022_List.rtf  global_oc_index.xlsx  sof_2022.xlsx
data/fsi-historic/: fsi-2024.xlsx
docs/: Figure_Tracker.csv  Figure_Tracker.xlsx  README.md  _config.yml  _toc.yml  environment.yml  index.md  pyproject.toml
docs/_build/.doctrees/: README.doctree  environment.pickle  index.doctree
docs/_build/.doctrees/notebooks/: main.doctree
docs/_build/html/: README.html  genindex.html  index.html  objects.inv  search.html
docs/_build/html/_sources/: index.md
docs/_build/html/notebooks/: main.html
docs/_build/jupyter_execute/notebooks/: main.ipynb
docs/notebooks/: main.ipynb
docs/src/: requirements.txt  utils.py
notebooks/: main.html  main.ipynb
src/: utils.py
