[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "slide-deck-analytics"
description = "FCV Slide Deck Analytics"
readme = "README.md"
requires-python = ">=3.9"
license = "Mozilla-2.0"
authors = [
    {name = "Miguel Purroy", email = "mpurroyvitola@worldbank.org"}
]
keywords = ["data-science", "refugee-analysis", "unhcr", "global-migration", "conflict"]

# Dynamic versioning from git tags
dynamic = ["version"]

# Core dependencies
dependencies = [
    # Core Python libraries
    "requests>=2.28.0",
    "pandas>=2.0.0",
    "numpy>=1.22.0",
    
    # Data processing and analysis
    "openpyxl>=3.1.0",
    "country-converter>=0.7.0",
    "pycountry>=22.3.5",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Networking and security
    "certifi>=2023.5.7",
    "urllib3>=2.0.0",
    
    # Type hints and utilities
    "typing-extensions>=4.5.0"
]

# Optional dependency groups
[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0"
]

# Documentation dependencies
docs = [
    "jupyter-book>=0.15.0",
    "sphinx>=5.0.0",
    "myst-parser>=1.0.0"
]

# Analysis-specific dependencies
analysis = [
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "statsmodels>=0.13.0"
]

# Logging and debugging
logging = [
    "logging>=0.5.1.2"
]

# Optional visualization enhancements
viz = [
    "plotly>=5.14.0",
    "bokeh>=3.1.0"
]

# Tool-specific configurations
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
# Files to include in source distribution
include = ["/src", "/notebooks", "/docs"]

# Code formatting and linting
[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

# Type checking configuration
[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true